crates/rstest-bdd-macros/tests/ui/mixed_mutability_fixtures.stderr
error[E0502]: cannot borrow value as mutable because it is also borrowed as immutable
 --> tests/ui/mixed_mutability_fixtures.rs:5:1
  |
5 | #[given("mixed mutability fixtures")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-
  | |                                   |
  | |                                   immutable borrow might be used here, when `__rstest_bdd_guard_rstest_bdd_arg_0` is dropped and runs the destructor for type `__rstest_bdd_guard_enum_rstest_bdd_arg_0<'_>`
  | mutable borrow occurs here
  | immutable borrow occurs here
  |
  = note: this error originates in the attribute macro `given` (in Nightly builds, run with -Z macro-backtrace for more info)
